--- a/d3.css
+++ b/d3.css
@@ -1,7 +1,7 @@
 body {
   background-color: #C9D7D6;
   font: 10px sans-serif;
-  padding: 2em;
+  padding: 0 2em;
   position: relative;
   text-align: center;
   overflow: visible;
@@ -9,7 +9,6 @@ body {
 
 #vis{
   position: relative;
-
 }
 
 .info {
